--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!--- note to self: figure out how to change stuff like &#44 (a comma) into the right puncuation?-->
 <head>
   <meta charset="utf-8">
   <title>UFO Finder</title>
