--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -23,8 +23,9 @@
       </div>
     </nav>
     <div class="hero text-center">
-      <h1>UFO Sightings</h1>
-      <p>The Truth is Out There</p>
+      <h1>I WANT TO BELIEVE</h1>
+      <p></p>
+      <img src="static/images/ufogif.gif"/>
     </div>
     <div class="container">
       <div class="row margin-top-50">
