--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -23,9 +23,9 @@
       </div>
     </nav>
     <div class="hero text-center">
-      <h1>I WANT TO BELIEVE</h1>
+      <h1>UFO SIGHTINGS
       <p></p>
-      <img src="static/images/ufogif.gif"/>
+      <img src="static/images/ufogif.gif"/></h1>
     </div>
     <div class="container">
       <div class="row margin-top-50">
@@ -39,7 +39,7 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <input class="form-control" id="datetime" type="text" placeholder="3/1/1639">
                       </li>
                     </ul>
                   </div>
