--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -32,7 +32,7 @@
         <div class="col-md-2">
           <aside class="filters">
             <div class="panel panel-default">
-              <div class="panel-heading">Filter Search</div>
+              <div class="panel-heading">SEARCH</div>
               <div class="panel-body">
                 <form>
                   <div class="form-group">
@@ -43,7 +43,7 @@
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" class="btn btn-default">Commence Filter</button>
                 </form>
               </div>
             </div>
